DOC/log error.txt
>>> (V7.3) Tải logic.db_manager & data_repository thành công.
>>> (V7.3) Tải logic.data_parser thành công.
>>> (V7.3) Tải logic.bridges.bridges_classic thành công.
Đã tải cài đặt từ config.json
ConfigManager (V7.8) đã khởi tạo thành công.
>>> (V7.3) Tải logic.backtester thành công.
[PATH FIX] C:\Users\KAKA\Documents\27loto\CODE5\git1 đã có trong sys.path
[IMPORT V4] Đã import thành công: SETTINGS
[IMPORT V4] Đã import thành công: data_repository, db_manager
[IMPORT V4] Đã import thành công: các hàm cầu (bridges_v16, memory, classic)
>>> (V7.3) Tải logic.bridges.bridge_manager_core thành công.
>>> (V7.3) Tải logic.dashboard_analytics thành công.
>>> (V7.3) Tải logic.ai_feature_extractor (AI Wrappers) thành công.
Lottery Service API (lottery_service.py) đã tải thành công (V7.4).
Traceback (most recent call last):
  File "C:\Users\KAKA\Documents\27loto\CODE5\git1\main_app.py", line 10, in <module>
    from ui.ui_main_window import DataAnalysisApp
  File "C:\Users\KAKA\Documents\27loto\CODE5\git1\ui\ui_main_window.py", line 33, in <module>
    from ui.ui_de_dashboard import UiDeDashboard
  File "C:\Users\KAKA\Documents\27loto\CODE5\git1\ui\ui_de_dashboard.py", line 159
    if g < 3: tags = ("hot",); elif g > 10: tags = ("cold",)
                               ^^^^
SyntaxError: invalid syntax
[Finished in 1.4s]